# metaswitch

./: .gitignore  CMakeLists.txt  README.md  buildspec.json  metaswitch.py
.github/scripts/: .build.zsh  .package.zsh  Build-Windows.ps1  Package-Windows.ps1
.github/workflows/: build-project.yaml
cmake/common/: bootstrap.cmake  buildspec_common.cmake
cmake/macos/: buildspec.cmake
old/: main.c  rotate_capture_source.h
old/pkg/: com.obsproject.Studio.Plugin.metaswitch
src/: README.md  device_enumeration.c  device_enumeration.h  main.c  plugin-main.c  rotate_capture_source.c  rotate_capture_source.h
src/metaswitch_plugin/devices/: enumerate.c  enumerate_win.c
src/metaswitch_plugin/render/: capture.cpp  capture_win.cpp  renderer.cpp
src/metaswitch_plugin/ui/: countdown_ui.cpp  metaswitch_ui.cxx
src/pkg/: com.obsproject.Studio.Plugin.metaswitch
